fix spacing above body

--- a/style/main.scss
+++ b/style/main.scss
@@ -578,8 +578,8 @@ hr {
   }
 
   body {
-    margin: 20px 0;
-    padding: 0 20px;
+    margin-top: 0;
+    padding: 20px;
   }
 
   h1.title {
